@@ -23,6 +23,7 @@ import static java.util.logging.Level.FINE;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import com.sun.faces.renderkit.Attribute;
 import com.sun.faces.renderkit.AttributeManager;
@@ -166,20 +167,20 @@ public class OutputLinkRenderer extends LinkRenderer {
 
         // Write Anchor attributes
 
-        Param paramList[] = getParamList(component);
-        StringBuffer sb = new StringBuffer();
+        Param[] paramList = getParamList(component);
+        StringBuilder sb = new StringBuilder();
         sb.append(hrefVal);
         boolean paramWritten = hrefVal.indexOf('?') > 0;
 
-        for (int i = 0, len = paramList.length; i < len; i++) {
-            String pn = paramList[i].name;
+        for (Param param : paramList) {
+            String pn = param.name;
             if (pn != null && pn.length() != 0) {
-                String pv = paramList[i].value;
+                String pv = param.value;
                 sb.append(paramWritten ? '&' : '?');
-                sb.append(URLEncoder.encode(pn, "UTF-8"));
+                sb.append(URLEncoder.encode(pn, StandardCharsets.UTF_8));
                 sb.append('=');
                 if (pv != null && pv.length() != 0) {
-                    sb.append(URLEncoder.encode(pv, "UTF-8"));
+                    sb.append(URLEncoder.encode(pv, StandardCharsets.UTF_8));
                 }
                 paramWritten = true;
             }
